--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     },
     "autoload": {
         "files": [
-            "core/Config.php", 
             "core/Functions/pa.php", 
             "core/Functions/pn.php"
+            "core/Config.php", 
+            "core/Model.php",
+            "core/Registr.php",
+            "core/Route.php",
+            
         ],
         "psr-4": {
             "App\\": "app/",
