--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
             "core/Functions/pa.php", 
             "core/Functions/pn.php",
             "core/Config.php", 
-            "core/Model.php",
+            "core/Data.php",
             "core/Registr.php",
             "core/Route.php"     
-        ],
+        ],                                         
         "psr-4": {
-            "App\\": "app/", "App\\": "core/",
-            "App\\Controllers\\": "app/",
-            "App\\Models\\"     : "app/",
-            "App\\Views\\"      : "app/"
-        }
+            "": "core/",
+             "App\\": "app/",
+             "App\\Models\\": "app/Models/",  
+             "App\\Views\\": "app/Views/"  
+         }
     } 
 }
