--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "watch": "webpack --mode production --watch"
   },
   "dependencies": {
     "mini-css-extract-plugin": "^2.6.1",
