--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "webpack --mode production --watch"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1"
   }
